Release history for Dist-Zilla-Util-ExpandINI

{{$NEXT}}
 [API]
 - Now instantiable with ->new()

 [Dependencies::Stats]
 - Dependencies changed since 0.001003, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +7 ↑2 -1 (recommends: +1, suggests: ↑2)
 - test: +1 (recommends: ↑2)

 [Metadata]
 - author = kentnl

0.001003 2014-08-15T22:30:33Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - tests augmented.
 - whitespace adjusted.

 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑1)
 - test: -4 (recommends: ↑1 -2)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - update Test::ReportPrereqs

0.001002 2014-07-23T17:44:44Z
 [00 Trivial]
 - Misc packaging cleanups

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1 (suggests: ↑2)
 - test: +2 ↑1 (recommends: +1)

0.001001 2014-06-03T05:43:02Z
 [Bugfix]
 - use a version of Config::INI with is_valid_property_name

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: -1 (suggests: +2 -1)
 - runtime: ↑1

0.001000 2014-06-02T21:24:12Z
 - First version.
